Correct heading overlapping hero image at 450px and down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -779,6 +779,11 @@ footer i:hover {
     }
 
     /* media */
+    .hero-images {
+        padding-top: 16.5rem;
+    }
+
+    /* media */
     iframe {
         width: 100%;
         height: 100%;
